--- a/form/assets/css/style.css
+++ b/form/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     padding: 0;
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 15px;
-    color: #b9b9b9;
+    /* color: #b9b9b9; */
     background-color: #e3e3e3;
     margin: 0;
 }
@@ -181,7 +181,7 @@ select option {
     transition: 0.35s ease-in-out;
     transition: all 0.35s ease-in-out;
 }
-.container {
+.credit-form-block {
     max-width: 38em;
     padding: 1em 3em 2em 3em;
     margin: 0em auto;
